--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
             <artifactId>maven-surefire-plugin</artifactId>
             <version>3.0.0-M5</version>
             <configuration>
+                <testFailureIgnore>true</testFailureIgnore>
                 <suiteXmlFiles>
                     <suiteXmlFile>testSelenium.xml</suiteXmlFile>
                 </suiteXmlFiles>
