--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
             <version>3.8.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>4.1</version>
+        </dependency>
 
         <dependency>
             <groupId>junit</groupId>
